--- a/reserve.html
+++ b/reserve.html
@@ -39,12 +39,13 @@
     </div>
   </div>
 
+  
+  
   <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">
+    src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+    
   </script>
-  <script>
+  
     const contentsOf = function contentsOf (id) {
       return $(id).val().trim()
     }
