--- a/tables.html
+++ b/tables.html
@@ -39,11 +39,10 @@
   
   </div> <!--div.container-->
   <script
-    src="https://code.jquery.com/jquery-3.2.1.min.js"
-    integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
-    crossorigin="anonymous">
+  src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"
+    
   </script>
-  <script>
+ 
     $.get('/api/tables')
      .done(function (data) {
        const pivot = 5
