--- a/tables.html
+++ b/tables.html
@@ -10,7 +10,14 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-        <h1>Hot Restaurant</h1>
+        <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
+        <hr>
+        <h2 class="text-center">Wait list</h2>
+        <br>
+        <div class="text-center">
+            <a href="/"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-home"></span> Home</button></a>
+            <a href="/reserve"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-credit-card"></span> Make Reservation</button></a>
+        </div>
     </div>
 
     <div class="panel panel-default">
