--- a/reserve.html
+++ b/reserve.html
@@ -10,7 +10,14 @@
 <body>
   <div class="container">
     <div class="jumbotron">
-      <h1>This is the reservation page.</h1>
+        <h1 class="text-center"><span class="glyphicon glyphicon-fire"></span> Hot Restaurant</h1>
+        <hr>
+        <h2 class="text-center">This is the reservation page.</h2>
+      <br>
+      <div class="text-center">
+          <a href="/"><button type="button" class="btn btn-lg btn-danger"><span class="glyphicon glyphicon-home"></span> Home</button></a>
+          <a href="/tables"><button type="button" class="btn btn-lg btn-primary"><span class="glyphicon glyphicon-list-alt"></span> View Tables</button></a>
+      </div>
     </div>
 
     <div id="reservation-form">
